fixed word-wrapping on listen page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,3 +69,7 @@ body {
   max-height: 500px;
   overflow-y: scroll;
 }
+
+.episodeDescription {
+  word-wrap: break-word; 
+ }
